@@ -1,5 +1,11 @@
 2002-08-29  John Levon  <levon@movementarian.org>
 
+	* QCommandBuffer.h:
+	* QCommandBuffer.C: use a QListView not combo box.
+	  Qt Sucks.
+ 
+2002-08-29  John Levon  <levon@movementarian.org>
+
 	* ui/*: use size grippie consistently
  
 2002-08-29  John Levon  <levon@movementarian.org>
